Fix contrast on the plugin list, add screenshots to catch regressions

--- a/packages/settingeditor/style/base.css
+++ b/packages/settingeditor/style/base.css
@@ -320,7 +320,7 @@ ul.jp-PluginList li.jp-mod-selected span.jp-PluginList-icon.jp-FileIcon {
   text-overflow: ellipsis;
   overflow-x: hidden;
   white-space: nowrap;
-  color: var(--jp-ui-font-color2);
+  color: var(--jp-ui-font-color1);
   line-height: var(--jp-cell-collapser-min-height);
 }
 
